# chip8-emulator

./: .gitignore  CMakeLists.txt  setup.sh
src/: chip8.cpp  chip8.h  colors.h  graphics.cpp  graphics.h  main.cpp  opcode_tester.h
